--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cesium-vue-test",
+  "name": "vue-cesium",
   "version": "1.0.0",
   "description": "cesium-vue的测试项目",
   "author": "xiongqianqian",
